--- a/index.html
+++ b/index.html
@@ -1,89 +1,208 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Firebase Demo</title>
-
-    <style>
-      body {
-        font-family: sans-serif;
-        display: grid;
-        place-items: center;
-        min-height: 90vh;
-        background: #f4f4f4;
-      }
-      .container {
-        background: #fff;
-        padding: 2rem;
-        border-radius: 8px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-        width: 350px;
-      }
-      h1 {
-        text-align: center;
-        margin-top: 0;
-      }
-      form {
-        display: flex;
-        flex-direction: column;
-      }
-      label {
-        margin-bottom: 0.5rem;
-        font-weight: bold;
-      }
-      input[type="email"],
-      input[type="password"] {
-        width: 100%;
-        padding: 0.75rem;
-        margin-bottom: 1rem;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box; /* Important */
-      }
-      button {
-        width: 100%;
-        padding: 0.75rem;
-        margin-bottom: 1rem;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-        background: #007bff;
-        color: white;
-        font-size: 1rem;
-      }
-      p {
-        text-align: center;
-      }
-      a {
-        color: #007bff;
-        text-decoration: none;
-      }
-      a:hover {
-        text-decoration: underline;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Login</h1>
-      <form id="login-form">
-        <label for="login-email">Email:</label>
-        <input type="email" id="login-email" required />
-
-        <label for="login-password">Password:</label>
-        <input type="password" id="login-password" required />
-
-        <button typeF="submit" id="login-button">Login</button>
-      </form>
-      <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Profile - Firebase Demo</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      display: grid;
+      place-items: center;
+      min-height: 90vh;
+      background: #f4f4f4;
+    }
+    .container {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+      width: 450px;
+    }
+    h1 {
+      text-align: center;
+      margin-top: 0;
+      color: #333;
+    }
+    .profile-info {
+      margin: 1rem 0;
+    }
+    .info-row {
+      display: flex;
+      justify-content: space-between;
+      padding: 0.75rem;
+      margin-bottom: 0.5rem;
+      background: #f8f9fa;
+      border-radius: 4px;
+    }
+    .info-label {
+      font-weight: bold;
+      color: #555;
+    }
+    .info-value {
+      color: #333;
+      word-break: break-all;
+    }
+    input, textarea {
+      width: 100%;
+      padding: 0.5rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
+    }
+    button {
+      width: 100%;
+      padding: 0.75rem;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 1rem;
+    }
+    #logout-button {
+      background: #dc3545;
+      color: white;
+      margin-top: 1rem;
+    }
+    #logout-button:hover {
+      background: #c82333;
+    }
+    #save-button {
+      background: #28a745;
+      color: white;
+    }
+    #save-button:hover {
+      background: #218838;
+    }
+    button:disabled {
+      background: #6c757d;
+      cursor: not-allowed;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>User Profile</h1>
+    <div id="profile-content">
+      Loading user information...
     </div>
 
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
-    <script src="js/firebase-config.js"></script>
-    <script src="js/auth.js"></script>
-  </body>
+    <button id="save-button">Save Changes</button>
+    <button id="logout-button">Logout</button>
+  </div>
+
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-storage-compat.js"></script>
+  <script src="js/firebase-config.js"></script>
+  <script>
+    const profileContent = document.getElementById("profile-content");
+    const logoutButton = document.getElementById("logout-button");
+    const saveButton = document.getElementById("save-button");
+    let currentUser = null;
+
+    auth.onAuthStateChanged(async (user) => {
+      if (user) {
+        currentUser = user;
+        loadUserInfo(user);
+      } else {
+        // Avoid redirecting to the same page (causes reload loop).
+        // Send the user to the signup/login page instead.
+        window.location.href = "signup.html";
+      }
+    });
+
+    async function loadUserInfo(user) {
+      try {
+        const docRef = db.collection("users").doc(user.uid);
+        const docSnap = await docRef.get();
+
+        let userData = { username: "", bio: "" };
+        if (docSnap.exists) {
+          userData = docSnap.data();
+        }
+
+        const createdAt = user.metadata.creationTime
+          ? new Date(user.metadata.creationTime).toLocaleString("fr-FR")
+          : "Non disponible";
+
+        const lastSignIn = user.metadata.lastSignInTime
+          ? new Date(user.metadata.lastSignInTime).toLocaleString("fr-FR")
+          : "Non disponible";
+
+        profileContent.innerHTML = `
+          <div class="profile-info">
+            <div class="info-row">
+              <span class="info-label">Email:</span>
+              <span class="info-value">${user.email}</span>
+            </div>
+            <div class="info-row">
+              <span class="info-label">User ID:</span>
+              <span class="info-value">${user.uid}</span>
+            </div>
+            <div class="info-row">
+              <span class="info-label">Email Verified:</span>
+              <span class="info-value">${user.emailVerified ? "Yes ✓" : "No ✗"}</span>
+            </div>
+            <div class="info-row">
+              <span class="info-label">Account Created:</span>
+              <span class="info-value">${createdAt}</span>
+            </div>
+            <div class="info-row">
+              <span class="info-label">Last Sign In:</span>
+              <span class="info-value">${lastSignIn}</span>
+            </div>
+          </div>
+
+          <div>
+            <label>Username:</label>
+            <input type="text" id="edit-username" value="${userData.username}" />
+
+            <label>Bio:</label>
+            <textarea id="edit-bio" rows="3">${userData.bio}</textarea>
+          </div>
+        `;
+      } catch (error) {
+        alert("Erreur lors du chargement du profil : " + error.message);
+      }
+    }
+
+    saveButton.addEventListener("click", async () => {
+      if (!currentUser) return;
+      saveButton.disabled = true;
+      saveButton.textContent = "Saving...";
+
+      const newUsername = document.getElementById("edit-username").value.trim();
+      const newBio = document.getElementById("edit-bio").value.trim();
+
+      try {
+        await db.collection("users").doc(currentUser.uid).update({
+          username: newUsername,
+          bio: newBio
+        });
+        alert("Profile updated successfully!");
+      } catch (error) {
+        alert("Erreur lors de la mise à jour : " + error.message);
+      } finally {
+        saveButton.disabled = false;
+        saveButton.textContent = "Save Changes";
+      }
+    });
+
+    logoutButton.addEventListener("click", async () => {
+      logoutButton.disabled = true;
+      logoutButton.textContent = "Logging out...";
+      try {
+        await auth.signOut();
+        // After sign-out, send the user to the login/signup page.
+        window.location.href = "signup.html";
+      } catch (error) {
+        alert("Erreur lors de la déconnexion : " + error.message);
+        logoutButton.disabled = false;
+        logoutButton.textContent = "Logout";
+      }
+    });
+  </script>
+</body>
 </html>
